tweak eslint config file

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,17 +5,14 @@
         "es2021": true
     },
     "extends": [
-        "eslint:recommended",
-        // "plugin:@typescript-eslint/recommended"
+        "eslint:recommended"
     ],
     "overrides": [
     ],
-    //"parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest"
     },
     "plugins": [
-        //"@typescript-eslint"
     ],
     "rules": {
     }
